welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:21: error: missing parameter type
    case_    =>fini=true
    ^